--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.11",
     "nodemon": "^2.0.22",
     "rimraf": "^4.4.1",
